--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.62"
 reqwest = "0.11.11"
 sqlx = { version = "0.6.1", features = ["postgres", "runtime-tokio-native-tls"] }
 tokio = { version = "1.20.1", features = ["full"] }
