--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,14 @@ workflows:
   version: 2
   branch:
     jobs:
-      - check
-      - test
+      - check:
+          filters:
+            tags:
+              ignore: /.*/
+      - test:
+          filters:
+            tags:
+              ignore: /.*/
       - rust/release-please-single:
           context: [lulubot]
           filters:
@@ -27,14 +33,19 @@ workflows:
           version: latest
   release:
     jobs:
-      - check
-      - test
+      - check:
+          filters:
+            branches:
+              ignore: /.*/
+      - test:
+          filters:
+            branches:
+              ignore: /.*/
       - rust/release-please-single:
           context: [lulubot]
           filters:
             branches:
-              only:
-                - main
+              ignore: /.*/
       - build:
           filters:
             tags:
