--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.62"
 reqwest = "0.11.11"
+seahash = "4.1.0"
 sqlx = { version = "0.6.1", features = ["postgres", "runtime-tokio-native-tls", "offline"] }
 tokio = { version = "1.20.1", features = ["full"] }
 warp = "0.3.2"
